testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_left_bracket/case11.expect.out
error: expected '{' in unicode escape, found '"'
  ==> case11.cj:16:4:
   | 
16 |     \u"""
   |     ~~^ expected '{'
   |     |
   |     because it is in this Unicode escape
   | 

1 error generated, 1 error printed.
